--- a/themes/WeLaunch2016/assets/scss/layouts/_pages.scss
+++ b/themes/WeLaunch2016/assets/scss/layouts/_pages.scss
@@ -543,7 +543,7 @@
 #blog {
   padding-top: em(30);
 }
-#blog a .panel-blog {
+#blog .panel-blog {
   @include span-columns(12);
   background-color: white;
   padding:em(30);
@@ -557,7 +557,7 @@
     @include omega(3n);
   }
 }
-#blog a .panel-blog .panel-heading {
+#blog .panel-blog .panel-heading {
   position: absolute;
   top:0;
   left:0;
@@ -565,7 +565,7 @@
   height:20em;
   background-size:cover;
 }
-#blog a .panel-blog .panel-body a {
+#blog .panel-blog .panel-body a {
   position: absolute;
   bottom:1em;
   left:2em;
